--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         </div>
         <div class="box">
                 <img src="./img/game.jpg">
-                <h3>VIDEO GAMMING</h3>
-                <p>We offer video gamming classes to aspiring video gammers at our offices in Rwebikona Mbarara </p>
-                <p>Come and compete with our experienced gamers and have a great experience during your happy times</p>
+                <h3>GRAPHICS GAME DEVELOPMENT</h3>
+                <p>We have professional graphics designers for banners, business cards, wedding cards and many others.</p>
+                <p>We also develop games for both android devices and other cross platforms.</p>
         </div>
     </div>
 </section>
