--- a/contact.html
+++ b/contact.html
@@ -83,11 +83,11 @@
       <aside id="sidebar">
           <div class="dark">
           <h3>Location</h3>
-          <p>Rwebikona Mbarara </p>
+          <p>Mbarara-Rwebikona Flat B Last Floor RoomNumber 17 </p>
           <p>Bushenyi Road</p>
           <p>Room No2</p>
           <h3>Contact</h3>
-          <p>+256 705749598 / +256 777122972</p>
+          <p>+256 777122972/ +256 759159915</p>
           <p>tweheyoivan@gmail.com</p>
           </div>
       </aside>
